# RAGAs-Evaluation-Experiment

./: .env.example  README.md  pyproject.toml  requirements.txt
scripts/: run_eval.sh  run_plot.sh  run_prepare.sh
src/: eval.py  plot_results.py  prepare_dataset.py
